syntax = "proto3";
package customer_side.service.v1;

option go_package = "github.com/timur-chilli/ggshop/customer_side/internal/pb/customer_side_api";
import "models/ggorder_model.proto";
import "google/api/annotations.proto";

service CustomerSideService {
   rpc GetGGOrderInfoByIDs (GetGGOrderInfoByIDsRequest) returns (GetGGOrderInfoByIDsResponse) {
        option (google.api.http) = {
            post: "/ggorderInfo/get-by-ids"
            body: "*"
        };
    }

    rpc InsertGGOrderInfos (GetGGOrderInfoInsertRequest) returns (GetGGOrderInfoInsertResponse) {
        option (google.api.http) = {
            post: "/ggorderInfo/insert"
            body: "*"
        };
    }
 }

message GetGGOrderInfoByIDsRequest {
    repeated uint64 ids = 1;
}

message GetGGOrderInfoByIDsResponse {
    repeated ggorder.models.v1.GGOrderInfoModel GGOrderInfos = 1;
}

message GetGGOrderInfoInsertRequest {
    repeated ggorder.models.v1.GGOrderInsertModel GGOrders = 1;
}

message GetGGOrderInfoInsertResponse {
}